starts filling out the .js files in app-frontend

--- a/app-frontend/index.html
+++ b/app-frontend/index.html
@@ -13,6 +13,9 @@
                 <input type="text"><br>
                 <input type="submit" name="" value="Submit Thing">
             </form>
+            <div id="lists">
+                
+            </div>
         </div>
 
         <script src="src/thing.js"></script>
