--- a/app-frontend/index.html
+++ b/app-frontend/index.html
@@ -7,19 +7,19 @@
         <title></title>
     </head>
     <body>
-        <div id="ListContainer">
-            <form id="ListForm">
+        <div id="listContainer">
+            <form id="listForm">
                 <label>List Name:</label>
                 <input type="text"><br>
                 <input type="submit" name="" value="Submit Thing">
             </form>
             <div id="lists">
-                
+
             </div>
         </div>
-
-        <script src="src/thing.js"></script>
+        
         <script src="src/list.js"></script>
-        <script src="src/index.js" defer></script>
+        <script src="src/thing.js"></script>
+        <script src="src/index.js" ></script>
     </body>
 </html>
